--- a/style.css
+++ b/style.css
@@ -489,7 +489,7 @@ btn-color-2:hover {
 
 #skills {
     position: relative;
-    background-image: url(./Assets/bgpic.jpg);
+    background-image: url(./Assets/mypic.jpg);
     padding: 5rem 0;
     height: 100vh;
     background-color: #0c0c0c;
